--- a/SOK.Web/Views/Plans/Create.cshtml
+++ b/SOK.Web/Views/Plans/Create.cshtml
@@ -268,6 +268,9 @@
                     this.form.priests[index].isActive = !checked;
                 },
                 removePriest(index) { this.form.priests.splice(index, 1); },
+            },
+            mounted() {
+                registerVueApp('create-plan-app');
             }
         }).mount('#create-plan-app');
     </script>
