--- a/SOK.Web/Views/Shared/_LayoutPublic.cshtml
+++ b/SOK.Web/Views/Shared/_LayoutPublic.cshtml
@@ -13,7 +13,7 @@
 
 </head>
 <body class="bg-base-100">
-    <div class="min-h-screen w-full flex flex-col items-center justify-center p-6">
+    <div class="min-h-screen w-full flex flex-col items-center justify-start p-6">
         @RenderBody()
     </div>
 
