--- a/SOK.Application/Templates/Email/footer.html
+++ b/SOK.Application/Templates/Email/footer.html
@@ -1,15 +1,243 @@
+<div class="u-row-container" style="padding: 0px;background-color: transparent">
+    <div class="u-row"
+        style="margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #1e73be;">
+        <div style="border-collapse: collapse;display: table;width: 100%;height: 100%;background-color: transparent;">
+            <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding: 0px;background-color: transparent;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width:600px;"><tr style="background-color: #1e73be;"><![endif]-->
+
+            <!--[if (mso)|(IE)]><td align="center" width="300" style="width: 300px;padding: 20px 20px 0px 90px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;" valign="top"><![endif]-->
+            <div class="u-col u-col-50"
+                style="max-width: 320px;min-width: 300px;display: table-cell;vertical-align: top;">
+                <div style="height: 100%;width: 100% !important;">
+                    <!--[if (!mso)&(!IE)]><!-->
+                    <div
+                        style="box-sizing: border-box; height: 100%; padding: 20px 20px 0px 90px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;">
+                        <!--<![endif]-->
+
+                        <table style="font-family:'Lato',sans-serif;" role="presentation" cellpadding="0"
+                            cellspacing="0" width="100%" border="0">
+                            <tbody>
+                                <tr>
+                                    <td style="overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:'Lato',sans-serif;"
+                                        align="left">
+
+                                        <div
+                                            style="font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word;">
+                                            <p style="font-size: 14px; line-height: 140%; text-align: left;">
+                                                <strong><span
+                                                        style="font-size: 16px; line-height: 22.4px; color: #ecf0f1;">Kontakt</span></strong>
+                                            </p>
+                                            <p style="font-size: 14px; line-height: 140%; text-align: left;">
+                                                 </p>
+                                            <p style="font-size: 14px; line-height: 140%; text-align: left;">
+                                                <span style="font-size: 14px; line-height: 19.6px; color: #ecf0f1;">%parish_address%</span>
+                                            </p>
+                                            <p style="font-size: 14px; line-height: 140%; text-align: left;">
+                                                <span
+                                                    style="font-size: 14px; line-height: 19.6px; color: #ecf0f1;"></span>
+                                            </p>
+                                        </div>
+
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <!--[if (!mso)&(!IE)]><!-->
+                    </div>
+                    <!--<![endif]-->
+                </div>
             </div>
-            <div style="background-color: #f8f9fa; padding: 20px; text-align: center; border-top: 1px solid #e9ecef;">
-                <p style="margin: 0; font-size: 14px; color: #6c757d;">
-                    %parish_name%<br>
-                    %parish_address%<br>
-                    <a href="%parish_website%" style="color: #007bff; text-decoration: none;">%parish_website%</a>
-                </p>
-                <p style="margin: 10px 0 0 0; font-size: 12px; color: #adb5bd;">
-                    Ten email został wygenerowany automatycznie. Prosimy nie odpowiadać na tę wiadomość.
-                </p>
+            <!--[if (mso)|(IE)]></td><![endif]-->
+            <!--[if (mso)|(IE)]><td align="center" width="300" style="width: 300px;padding: 15px 0px 0px 30px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;" valign="top"><![endif]-->
+            <div class="u-col u-col-50"
+                style="max-width: 320px;min-width: 300px;display: table-cell;vertical-align: top;">
+                <div style="height: 100%;width: 100% !important;">
+                    <!--[if (!mso)&(!IE)]><!-->
+                    <div
+                        style="box-sizing: border-box; height: 100%; padding: 20px 20px 0px 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;">
+                        <!--<![endif]-->
+
+                        <table style="font-family:'Lato',sans-serif;" role="presentation" cellpadding="0"
+                            cellspacing="0" width="100%" border="0">
+                            <tbody>
+                                <tr>
+                                    <td style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 10px;font-family:'Lato',sans-serif;"
+                                        align="left">
+
+                                        <div
+                                            style="font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word;">
+                                            <p style="line-height: 140%; font-size: 14px;"><span
+                                                    style="font-size: 14px; line-height: 19.6px;"><span
+                                                        style="color: #ecf0f1; font-size: 14px; line-height: 19.6px;"><span
+                                                            style="line-height: 19.6px; font-size: 14px;"><strong>Napisz
+                                                                do
+                                                                nas:</strong></span></span></span>
+                                            </p>
+                                            <p style="line-height: 140%; font-size: 14px;"><span
+                                                    style="font-size: 14px; line-height: 19.6px; color: #ecf0f1;"><span
+                                                        style="font-size: 14px; line-height: 19.6px;"><span
+                                                            style="line-height: 19.6px; font-size: 14px;"><a
+                                                                rel="noopener"
+                                                                href="mailto:%parish_email%"
+                                                                target="_blank"
+                                                                style="color: #ecf0f1;"><strong>%parish_email%</strong></a></span></span></span>
+                                            </p>
+                                        </div>
+
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <table style="font-family:'Lato',sans-serif;" role="presentation" cellpadding="0"
+                            cellspacing="0" width="100%" border="0">
+                            <tbody>
+                                <tr>
+                                    <td style="overflow-wrap:break-word;word-break:break-word;padding:5px 10px 10px;font-family:'Lato',sans-serif;"
+                                        align="left">
+
+                                        <div
+                                            style="font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word;">
+                                            <p style="line-height: 140%; font-size: 14px;"><span
+                                                    style="font-size: 14px; line-height: 19.6px;"><span
+                                                        style="color: #ecf0f1; font-size: 14px; line-height: 19.6px;"><span
+                                                            style="line-height: 19.6px; font-size: 14px;"><span
+                                                                style="color: #ecf0f1; line-height: 19.6px;"><a
+                                                                    rel="noopener" href="tel:%parish_phone%" target="_blank"
+                                                                    style="color: #ecf0f1;"><strong>%parish_phone%
+                                                                    </strong></a></span><span
+                                                                style="color: #ced4d9; line-height: 19.6px;">-
+                                                                komórkowy</span></span></span></span>
+                                            </p>
+                                        </div>
+
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <!--[if (!mso)&(!IE)]><!-->
+                    </div>
+                    <!--<![endif]-->
+                </div>
             </div>
-</div>
+            <!--[if (mso)|(IE)]></td><![endif]-->
+            <!--[if (mso)|(IE)]></tr></table></td></tr></table><![endif]-->
+        </div>
     </div>
+</div>
+
+
+
+
+
+<div class="u-row-container" style="padding: 0px;background-color: #f9f9f9">
+    <div class="u-row"
+        style="margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #1e73be;">
+        <div style="border-collapse: collapse;display: table;width: 100%;height: 100%;background-color: transparent;">
+            <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding: 0px;background-color: #f9f9f9;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width:600px;"><tr style="background-color: #1e73be;"><![endif]-->
+
+            <!--[if (mso)|(IE)]><td align="center" width="600" style="width: 600px;padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;" valign="top"><![endif]-->
+            <div class="u-col u-col-100"
+                style="max-width: 320px;min-width: 600px;display: table-cell;vertical-align: top;">
+                <div style="height: 100%;width: 100% !important;">
+                    <!--[if (!mso)&(!IE)]><!-->
+                    <div
+                        style="box-sizing: border-box; height: 100%; padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;">
+                        <!--<![endif]-->
+
+                        <table style="font-family:'Lato',sans-serif;" role="presentation" cellpadding="0"
+                            cellspacing="0" width="100%" border="0">
+                            <tbody>
+                                <tr>
+                                    <td style="overflow-wrap:break-word;word-break:break-word;padding:15px;font-family:'Lato',sans-serif;"
+                                        align="left">
+
+                                        <table height="0px" align="center" border="0" cellpadding="0" cellspacing="0"
+                                            width="100%"
+                                            style="border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;border-top: 1px solid #1e73be;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%">
+                                            <tbody>
+                                                <tr style="vertical-align: top">
+                                                    <td
+                                                        style="word-break: break-word;border-collapse: collapse !important;vertical-align: top;font-size: 0px;line-height: 0px;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%">
+                                                        <span>&#160;</span>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <!--[if (!mso)&(!IE)]><!-->
+                    </div>
+                    <!--<![endif]-->
+                </div>
+            </div>
+            <!--[if (mso)|(IE)]></td><![endif]-->
+            <!--[if (mso)|(IE)]></tr></table></td></tr></table><![endif]-->
+        </div>
+    </div>
+</div>
+
+
+
+
+
+<div class="u-row-container" style="padding: 0px;background-color: transparent">
+    <div class="u-row"
+        style="margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #f9f9f9;">
+        <div style="border-collapse: collapse;display: table;width: 100%;height: 100%;background-color: transparent;">
+            <!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding: 0px;background-color: transparent;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width:600px;"><tr style="background-color: #f9f9f9;"><![endif]-->
+
+            <!--[if (mso)|(IE)]><td align="center" width="600" style="width: 600px;padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;" valign="top"><![endif]-->
+            <div class="u-col u-col-100"
+                style="max-width: 320px;min-width: 600px;display: table-cell;vertical-align: top;">
+                <div style="height: 100%;width: 100% !important;">
+                    <!--[if (!mso)&(!IE)]><!-->
+                    <div
+                        style="box-sizing: border-box; height: 100%; padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;">
+                        <!--<![endif]-->
+
+                        <table style="font-family:'Lato',sans-serif;" role="presentation" cellpadding="0"
+                            cellspacing="0" width="100%" border="0">
+                            <tbody>
+                                <tr>
+                                    <td style="overflow-wrap:break-word;word-break:break-word;padding:0px 40px 30px 20px;font-family:'Lato',sans-serif;"
+                                        align="left">
+
+                                        <div
+                                            style="font-size: 14px; line-height: 140%; text-align: left; word-wrap: break-word;">
+
+                                        </div>
+
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <!--[if (!mso)&(!IE)]><!-->
+                    </div>
+                    <!--<![endif]-->
+                </div>
+            </div>
+            <!--[if (mso)|(IE)]></td><![endif]-->
+            <!--[if (mso)|(IE)]></tr></table></td></tr></table><![endif]-->
+        </div>
+    </div>
+</div>
+
+
+
+<!--[if (mso)|(IE)]></td></tr></table><![endif]-->
+</td>
+</tr>
+</tbody>
+</table>
+<!--[if mso]></div><![endif]-->
+<!--[if IE]></div><![endif]-->
 </body>
+
 </html>
