--- a/SOK.Web/Views/PublicForm/Success.cshtml
+++ b/SOK.Web/Views/PublicForm/Success.cshtml
@@ -32,6 +32,7 @@
         <div class="flex justify-center items-center gap-4 mt-6">
             @if (ViewData["SubmissionPanelUrl"] != null) {
                 <a href="@ViewData["SubmissionPanelUrl"]"
+                    target="_top"
                     class="btn btn-primary">
                     Panel zgłoszenia
                 </a>
