Dodano scroll na górę po wysłaniu zgłoszenia

--- a/SOK.Web/Views/PublicForm/Success.cshtml
+++ b/SOK.Web/Views/PublicForm/Success.cshtml
@@ -51,3 +51,9 @@
         </div>
     </div>
 </div>
+
+<script>
+    $(document).ready(function () {
+        window.scrollTo(0, 0, { behavior: 'smooth' });
+    });
+</script>
